<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SigaaBiblio</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="nomeSistema">BiblioUFPBMobile</string>
    <string name="title_activity_login">Login</string>
    <string name="title_activity_busca_livro">BuscaLivroActivity</string>
    <string name="title_activity_resultado_acervo">ResultadoAcervoActivity</string>
    <string name="title_activity_historico">HistoricoActivity</string>
    <string name="header_renovacao"> Renovar Empréstimo </string>
    <string name="title_activity_renovacao">RenovacaoActivity</string>
    <string name="title_activity_menu">MenuActivity</string>
    <string name="title_busca_livro">Pesquisa de Livros</string>
    <string name="text_busca_livro">Preencha pelo menos um dos campos abaixo</string>
    <string name="title_activity_situacao_usuario">SituacaoUsuarioActivity</string>
    <string name="titleActivitySituacaoUsuario">Situação do Usuário</string>
    <string name="title_activity_resultado_busca">ResultadoBuscaActivity</string>
    <string name="header_resultados"> Resultados da Busca</string>
    <string name="header_historico"> Histórico de Empréstimos</string>
    <string name="prompt_periodo_historico"> Período dos Empréstimos</string>
    <string name="prompt_periodo_historico_inicial"> Data Inicial:</string>
    <string name="prompt_periodo_historico_final"> Data Final:</string>
    <string name="label_gerar_historico"> Consultar Histórico</string>
    <string name="title_activity_busca_artigo">BuscaArtigo</string>
    <string name="title_busca_artigo">Pesquisa de Artigos</string>
    <string name="text_busca_artigo">Preencha pelo menos um dos campos abaixo</string>
    <string name="title_activity_dados_do_titulo">DadosDoTitulo</string>
    <string name="title_dados_titulo">Dados do Título</string>
    <string name="title_activity_dados_titulo">DadosTitulo</string>
    <string name="title_activity_exemplares">ExemplaresActivity</string>
    <string name="title_exemplares">Exemplares de %s</string>
    <string name="title_activity_selecionar_historico">SelecionarHistoricoActivity</string>
    <string name="title_activity_historico_emprestimos">HIstoricoEmprestimosActivity</string>
    <string name="titleHistorico">Historico de Empréstimos</string>
    <string name="title_activity_resultado_busca_artigoctivity">ResultadoBuscaArtigoctivity</string>
    <string name="title_activity_exemplar_artigo">ExemplarArtigoActivity</string>
    <string name="exemplar_artigo">Exemplar</string>
    <string name="title_activity_renovacao_error">RenovacaoErrorActivity</string>
    <string name="title_activity_cambridge">Cambridge</string>
    <string name="title_activity_cabridge">CabridgeActivity</string>

    <!-- Preferências -->
    <string name="configuracoes_title"> Configurações</string>
    <string name="configuracoes_atalho">s</string>
    <string name="lembrar">Lembrar Usuário</string>
    <string name="lembrar_texto">Realiza login automático</string>
    <string name="cor">Cor Alternativa</string>
    <string name="cor_texto">Muda esquema de cores</string>
    <string name="guardarHist">Recuperar Histórico</string>
    <string name="guardar_texto">Recuperar a ultimo histórico de emprestimos consultado</string>
    <string name="guardarCamposPesquisas">Salvar Campos de Pesquisa </string>
    <string name="pesquisas_texto">Recuperar os campos utilizados na ultima consulta</string>
    <string name="guardarRenovacao">Registro de Renovação</string>
    <string name="guardar_renovacao_texto">Manter um registro das renovações realizadas</string>
    <string name="title_activity_registro_renovacoes">RegistroRenovacoesActivity</string>
    <string name="title_activity_maps">MapsActivity</string>

</resources>