<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
	<CheckBoxPreference
	    android:key="lembrarLogin"
		android:title="@string/lembrar"
		android:summary="@string/lembrar_texto"
		android:defaultValue="false" />
	<CheckBoxPreference
	    android:key="cores"
		android:title="@string/cor"
		android:summary="@string/cor_texto"
		android:defaultValue="false" />
	
	<CheckBoxPreference
	    android:key="guardarHistorico"
		android:title="@string/guardarHist"
		android:summary="@string/guardar_texto"
		android:defaultValue="false" />
	
	<CheckBoxPreference
	    android:key="guardarPesquisa"
		android:title="@string/guardarCamposPesquisas"
		android:summary="@string/pesquisas_texto"
		android:defaultValue="false" />
	
	<CheckBoxPreference
	    android:key="guardarDadosPesquisa"
		android:title="@string/guardarPesquisa"
		android:summary="@string/guardar_pesquisa_texto"
		android:defaultValue="false" />
	
	
</PreferenceScreen>