<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#EFF3FA"
    android:orientation="vertical"
    android:weightSum="1" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:background="@drawable/background1"
        android:gravity="center"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/headerHistorico"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/header_historico"
            android:textColor="@android:color/white"
            android:textSize="25dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="match_parent"
            android:layout_height="49dp"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:layout_weight="0.59"
            android:background="@drawable/background2"
            android:gravity="center"
            android:text="@string/prompt_periodo_historico"
            android:textSize="20dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="1" >

        <TextView
            android:id="@+id/labelInicial"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="7dp"
            android:layout_weight="0.70"
            android:text="@string/prompt_periodo_historico_inicial"
            android:textSize="15dp" />

        <EditText
            android:id="@+id/dataInicialText"
            android:layout_width="132dp"
            android:layout_height="wrap_content"
            android:layout_margin="7dp"
            android:ems="10"
            android:inputType="date" >

            <requestFocus />
        </EditText>

        <ImageButton
            android:id="@+id/calendario_img1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="0.50"
            android:background="@android:color/transparent"
            android:onClick="a"
            android:src="@drawable/calendar" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="1" >

        <TextView
            android:id="@+id/labelFinal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="7dp"
            android:layout_weight="0.70"
            android:text="@string/prompt_periodo_historico_final"
            android:textSize="15dp" />

        <EditText
            android:id="@+id/dataFinalText"
            android:layout_width="126dp"
            android:layout_height="wrap_content"
            android:layout_margin="7dp"
            android:layout_weight="0.12"
            android:ems="10"
            android:inputType="date" >

            <requestFocus />
        </EditText>

        <ImageButton
            android:id="@+id/calendario_img2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="0.30"
            android:background="@android:color/transparent"
            android:src="@drawable/calendar" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.86"
        android:gravity="center" >

        <Button
            android:id="@+id/consultarHistorico"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/label_gerar_historico" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/background3"
        android:layout_weight="0.15" >
    </LinearLayout>

</LinearLayout>